Bug #6302: Add new page visuals z-indexes

--- a/src/webroot/cms/content-manager/sitemap/modules/new-page.less
+++ b/src/webroot/cms/content-manager/sitemap/modules/new-page.less
@@ -7,7 +7,7 @@
 	
 	.deco {
 		position: absolute;
-		z-index: 1;
+		z-index: 3;
 		left: 120px;
 		top: 25px;
 		
@@ -33,12 +33,12 @@
 	
 	.item-page {
 		position: relative;
-		z-index: 2;
+		z-index: 4;
 		margin: 0;
 		
 		label {
 			position: relative;
-			z-index: 3;
+			z-index: 5;
 			padding: 28px 0 0;
 			
 			cursor: pointer;
@@ -114,12 +114,12 @@
 	.border-radius (8px);	
 	.box-shadow (0, 2px, 3px, rgba(0, 0, 0, 0.75) inset);
 	background: rgba(35, 33, 42, 0.5);
-	z-index: 1;
+	z-index: 3;
 }
 
 // Fake tree node proxy which is being dragged
 .su-sitemap > .su-tree-node-fake {
-	z-index: 2;
+	z-index: 4;
 	
 	.item {
 		label {
